# c-collections

./: CODE_OF_CONDUCT.md  Makefile.am  README.md  SECURITY.md  config.h  configure.ac
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql.yml  codeql2.yml
examples/: Makefile.am  deque.c  filter_map_reduce.c  vector_structs.c  word_count.c
include/: common.h  hashmap.h  vector.h
tests/: Makefile.am  check_hashmap.c  check_vector.c
