bin_PROGRAMS = deque filter_map_reduce vector_structs word_count
deque_SOURCES = deque.c $(top_builddir)/include/vector.h
filter_map_reduce_SOURCES = filter_map_reduce.c $(top_builddir)/include/*.h
vector_structs_SOURCES = vector_structs.c $(top_builddir)/include/*.h
word_count_SOURCES = word_count.c $(top_builddir)/include/*.h