TESTS = check_vector check_hashmap
check_PROGRAMS = check_vector check_hashmap
check_vector_SOURCES = check_vector.c $(top_builddir)/include/*.h
check_vector_CFLAGS = @CHECK_CFLAGS@
check_vector_LDADD = @CHECK_LIBS@
check_hashmap_SOURCES = check_hashmap.c $(top_builddir)/include/*.h
check_hashmap_CFLAGS = @CHECK_CFLAGS@
check_hashmap_LDADD = @CHECK_LIBS@